# data_mining

./: AutoGluon_IEEE_Fraud_Colab.ipynb  README.md  autogluon_multimodal_colab.ipynb  ieee_fraud_colab.ipynb
apachebeam/: README.md  apachebeam.ipynb
assignment1/: ChatGPT - Data Mining.docx  README.md  lung_cancer_dataset.csv  main.py
assignment_pycaret/: 01_binary_classification_pycaret.ipynb  02_multiclass_classification_pycaret.ipynb  03_regression_pycaret.ipynb  04_clustering_pycaret.ipynb  05_anomaly_detection_pycaret.ipynb  06_association_rules_pycaret_2_3_5.ipynb  07_ts_univariate_pycaret.ipynb  08_ts_exogenous_pycaret.ipynb  09_gradio_classification_demo.ipynb  10_gradio_timeseries_demo.ipynb  README.md  Tutorial - Multiclass Classification.ipynb  (+1 more)
data-mining-assignment/crisp-dm_project/: 04_modeling.ipynb  README.md  main.py  pyproject.toml
data-mining-assignment/crisp-dm_project/data/processed/: test.parquet  train.parquet  val.parquet
data-mining-assignment/crisp-dm_project/deployment/: Dockerfile  api.py  requirements.txt
data-mining-assignment/crisp-dm_project/notebooks/: 01_business_understanding.ipynb  02_data_understanding.ipynb  03_data_preparation.ipynb  04_modeling.ipynb  05_evaluation.ipynb
data-mining-assignment/crisp-dm_project/reports/: business_critic.txt  data_critic.txt  data_prep_critic.txt  deploy_critic.txt  eval_critic.txt  modeling_critic.txt  prep_checks.json  updated_business_understanding.txt
data-mining-assignment/crisp-dm_project/src/features/: pipeline.py
data-mining-assignment/crisp-dm_project/tests/: test_inference.py
(+62 files in other folders)
